--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -16,6 +16,10 @@ jobs:
       - name: install psi
         run: npm install psi
       - name: Mobile
-        run: DESKTOP_PSI_RESULTS=$(node psi.js https://www.bioconductor.org/ desktop 50)
+        run: |
+          echo "MOBILE_RESULTS<<EOF" >> $GITHUB_ENV
+          echo "$(node psi.js https://www.bioconductor.org/ desktop 70)" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
       - name: add_comment
-        run: $DESKTOP_PSI_RESULTS
+        run: |
+          echo "${{env.MOBILE_RESULTS}}"
