Update pr_deploy.yaml, only running on draft prs

--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -4,7 +4,7 @@ on:
     types: [opened, reopened, synchronize]
 jobs:
   dev-pr-create-s3:
-    if: github.event.pull_request.draft == false && ${{startsWith(github.ref, 'refs/heads/feat/') || startsWith(github.ref, 'refs/heads/fix/')}} 
+    if: github.event.pull_request.draft == false
 
     runs-on: ubuntu-latest
     environment: dev
