added style ignore again

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,3 @@
 {
-  "extends": ["stylelint-config-standard"],
-  "ignoreFiles": ["assets/style/bioconductor.css"]
+  "extends": ["stylelint-config-standard"]
 }
