--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "htmllint-cli": "^0.0.7",
     "markdownlint-cli": "^0.35.0",
     "stylelint": "^15.10.1",
-    "stylelint-config-standard": "^34.0.0"
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-selector-bem-pattern": "^3.0.0"
   }
 }
