--- a/content/examples/index.yaml
+++ b/content/examples/index.yaml
@@ -3,3 +3,4 @@ title: Example Index File
 suppress_subnav: true
 subnav:
   - include: components/examples/sidebar
+  - include: _bioc_release_packages
