--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -17,6 +17,20 @@ jobs:
         with:
           ruby-version: "2.6.5"
 
+      - name: Cache Nanoc tmp
+        id: cache-nanoc-tmp
+        uses: actions/cache@v3
+        with:
+          path: tmp
+          key: ${{ runner.os }}-nanoc-tmp
+
+      - name: Cache Site Output
+        id: cache-site-output
+        uses: actions/cache@v3
+        with:
+          path: output
+          key: ${{ runner.os }}-site-output
+
       - name: Install dependencies
         run: |
           gem install bundler
