Added bundler cache

--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
           ruby-version: "2.6.5"
+          bundler-cache: true
 
       - name: Restore Nanoc Cache
         id: cache-nanoc-tmp
