--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           ruby-version: "2.6.5"
           bundler-cache: true
-        - run: bundle exec rake
+        run: bundle exec rake
 
       - name: Create Bucket
         run: |
