--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -27,10 +27,12 @@ jobs:
           key: ${{ runner.os }}-site-output
 
       - name: Set up ruby
-        uses: ruby/setup-ruby@v1
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
           ruby-version: "2.6.5"
           bundler-cache: true
+
+      - name: build website
         run: bundle exec rake
 
       - name: Create Bucket
