--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -33,9 +33,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          gem install bundler
-          bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
+          bundle info nanoc
 
       - name: build website
         run: rake
