--- a/.github/workflows/pr_deploy.yaml
+++ b/.github/workflows/pr_deploy.yaml
@@ -31,6 +31,13 @@ jobs:
           path: output
           key: ${{ runner.os }}-site-output
 
+      - name: Restore Dependency Cache
+        id: cache-gems
+        uses: actions/cache@v3
+        with:
+          path: /opt/hostedtoolcache/Ruby/2.6.5/x64/lib/ruby/gems/2.6.0/gems/
+          key: ${{ runner.os }}-gems
+
       - name: Install dependencies
         run: |
           bundle install --jobs 4 --retry 3
