--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": ["stylelint-config-standard"],
-  "rules": {
-    "media-feature-range-notation": null
-  }
+  "extends": ["stylelint-config-standard"]
 }
